# burgerApp

./: README.md  app.py  models.py  pyproject.toml
static/css/: custom.css
static/js/: cart.js  feedback.js  inventory.js  kitchen.js  menu.js  orders.js  stats.js
static/js/admin/: categories.js  products.js  stats.js
templates/: admin.html  base.html  inventory.html  kitchen.html  menu.html  orders.html  stats.html
templates/admin/: categories.html  dashboard.html  inventory.html  products.html  stats.html
