[tool.poetry]
name = "BurgerApp"
version = "0.1.0"
description = "Add your description here"
authors = ["Eloy Castillo"]

[tool.poetry.dependencies]
email-validator = "^2.2.0"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
twilio = "^9.4.1"
flask-socketio = "^5.4.1"
flask-migrate = "^4.0.7"
alembic = "^1.14.0"
stripe = "^11.3.0"
python= "^3.9"
